# pptxlate

./: README.txt  pyproject.toml
pptxlate/: __main__.py  _cli.py  _maps.py  _trans.py
